      referencing the license of the header paragraph
      when said paragraph is *the* header paragraph.
      (Closes: #769818)

  * data/cruft/non-free-files:
    + [BR] Add a few lenna image. Thanks to Norbert
      Preining <preining@logic.at> (Closes: #790915).
  * data/spelling/corrections-multiword:
    + [JW] Correct spelling for "GNU Public Licence".
      (Closes: #790369)

  * helpers/coll/objdump-info-helper:
    + [NT] Fix use of undefined variable in some cases.
    + [JW,NT] Gracefully cope with upstreams storing poems in
      valid ar archives with the file extension ".a" and
      possibly also corrupt ar files.
      (Closes: #790493)
  * helpers/coll/strings-helper:
    + [NT] Avoid an unncessary overhead in using L::Command's
      spawn+reap.  In some cases, this can reduce the runtime
      of this command by ~50%.

  * lib/Lintian/Check.pm:
    + [NT] Optimise out some calls to Lintian::Data, which in
      a few cases adds up to a couple of seconds in total
      runtime.

  * reporting/harness:
    + [NT] Add a --[no-]generate-reports option as alias of
      the -r mode.  The option can now be used together with
      "-i", "-f" or "-c" to control whether the reports
      should generated at the end of the run.  Without any
      of these, harness will only generate reports like it
      used to do.
  * reporting/templates/*.tmpl:
    + [NT] Change from XHTML 1.1 to HTML5.

 -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 17:01:10 +0200

lintian (2.5.32) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - changelog-empty-entry
      - dh-manual-sequence-control-obsolete
      - license-problem-non-free-img-lenna
      - missing-intermediate-directory
      - package-contains-cmake-private-file
      - package-contains-mime-file-outside-package-dir
      - package-install-apt-preferences
      - package-install-apt-sources
      - package-install-ieee-data
      - service-key-has-whitespace